fix layout shift

--- a/docs/src/styles/index.css
+++ b/docs/src/styles/index.css
@@ -153,10 +153,6 @@ article > section li > :is(p, pre, blockquote):not(:first-child) {
 	margin-top: 1rem;
 }
 
-article ul {
-	list-style-type: circle;
-}
-
 article > section :is(ul, ol) {
 	padding-left: 1em;
 }
